# foc

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  Build.cmake  Build.cmd  CMakeFOClassic.txt  CMakeLists.txt  FormatSource.cmd  LICENSE.md  Pack.cmake  Pack.cmd
Client/: DataFiles.cfg  FOnline.cfg
Client/data/art/intrface/: default.ini
Mapper/: Mapper.cfg  tabs.cfg
Server/: CMakeLists.txt  Server.cfg
Server/data/: CMakeLists.txt  CritterTypes.cfg
Server/dialogs/: CMakeLists.txt  dialogs.cfg  dialogs.lst
Server/extensions/: CMakeLists.txt  extension.cpp  extension.h
Server/extensions/AngelScript/: Buffer.cpp  Buffer.h
Server/extensions/Client/: Animations.cpp  Animations.h  Interface.cpp  Interface.h  ReservedFunctions.cpp  UserInterface.cpp  UserInterface.h
Server/extensions/Mapper/: ReservedFunctions.cpp
Server/extensions/Server/: Dialogs.cpp  Dialogs.h  Lockers.cpp  Lockers.h  ReservedFunctions.cpp  WorldMap.cpp  WorldMap.h
Server/extensions/Utils/: CMakeLists.txt  ExecuteString.cpp  ExecuteString.h
Server/maps/: CMakeLists.txt  GenerateWorld.cfg  Locations.cfg  bb01.fomap
Server/proto/: CMakeLists.txt
Server/proto/items/: hardcoded.fopro  items.lst
Server/scripts/: CMakeLists.txt  bind.fos  client.fos  mapper.fos  scripts.cfg  server.fos  strtoint.fos  strtoint_h.fos
Server/text/: CMakeLists.txt
Server/text/engl/: FOGAME.MSG  FOGM.MSG
Source/Extensions/: CMakeLists.txt  FOC.Client.cpp  FOC.Client.h  FOC.Mapper.cpp  FOC.Mapper.h  FOC.Server.cpp  FOC.Server.h  FOC.h
Source/Extensions/AngelScript/: Buffer.cpp  Buffer.h
Source/Extensions/Client/: Animations.cpp  Animations.h  Interface.cpp  Interface.h
Source/Extensions/Client/Screen/: Game.cpp  Game.h  Info.cpp  Info.h  Inventory.cpp  Inventory.h  Login.cpp  Login.h  MiniMap.cpp  MiniMap.h
Source/Extensions/PGUI/: CMakeLists.txt  PGUI.Button.cpp  PGUI.Button.h  PGUI.Core.cpp  PGUI.Core.h  PGUI.Draw.cpp  PGUI.Draw.h  PGUI.Element.cpp  PGUI.Element.h  PGUI.Event.h  PGUI.Keyboard.cpp  PGUI.Keyboard.h  PGUI.Label.cpp  PGUI.Label.h  PGUI.Screen.cpp  PGUI.Screen.h  PGUI.TextBox.cpp  PGUI.TextBox.h
Source/Extensions/Server/: Dialogs.cpp  Dialogs.h  Lockers.cpp  Lockers.h  WorldMap.cpp  WorldMap.h
Source/Extensions/Shared/: ApCost.cpp  ApCost.h  Buffer.Array.cpp  Buffer.Array.h  Buffer.Test.h  Buffer.cpp  Buffer.h  CritterMutual.h  Hex2D.cpp  Hex2D.h  MoveItem.cpp  MoveItem.h  SScriptFunc.h  TimeCalc.h
